# hestia_tauri

./: .claudeignore  .gitignore  AGENTS.md  AGENTS.md.debug.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  bun.lockb  components.json  dev.nu  flake.nix  main.sqlite  package-lock.json  package.json  shell.nix  taplo.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/agents/: plan-reviewer.md
.claude/hooks/: error-handling-reminder.sh  error-handling-reminder.ts  skill-activation-prompt.sh  skill-activation-prompt.ts
.claude/skills/backend-dev-guidelines/: SKILL.md
.github/workflows/: hestia-cicd-linux.yml  hestia-cicd-multios.yml  hestia-cicd-multios.yml.bck  hestia-cicd.yml
app/: CLAUDE.md  Cargo.toml  debug_webkit.sh  flake.nix  index.html  main.sqlite  main.sqlite3  package-lock.json  package.json  shell.nix  tsconfig.json  tsconfig.node.json  vite.config.ts
app/.claude/agents/: rust-backend-engineer.md  typescript-pro.md
app/entity/: Cargo.toml
app/entity/src/: file_has_tags.rs  file_system_identifier.rs  file_types.rs  files.rs  folders.rs  icon.rs  lib.rs  mod.rs  prelude.rs  tag_has_tags.rs  tags.rs  thumbnails.rs
app/migration/: Cargo.toml
app/migration/prepared_migration/: m20250729_185242_root_folder_may_be_null.rs
app/migration/src/: lib.rs  m20250222_173535_create_file_tags.rs  m20250831_100001_create_file_system_identifier.rs  m20250831_100002_create_file_types.rs  m20250831_100003_create_tags.rs  m20250831_100004_create_files.rs  m20250831_100005_create_folders.rs  m20250831_100007_create_tag_has_tags.rs  m20250831_181914_icon_color.rs
app/plans/: 01_refactor_plan.md  02_thumbnail_pipeline_implementation.md  03_thumbnail_caching_and_preloading_strategy.md
app/src/: App.css  App.tsx  Layout.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: database_queries.rs  file_operations.rs  folder_management.rs  library_management.rs  mod.rs  tag_management.rs  thumbnail_service.rs  util.rs
app/src-tauri/src/config/: app.rs  database.rs  library.rs  mod.rs  scanner.rs
app/src-tauri/src/data/commands/: filter.rs  mod.rs  watched_folders.rs
app/src-tauri/src/data/internal/: file.rs  mod.rs  tag.rs  thumbnails.rs
app/src-tauri/src/database/: commands.rs  manager.rs  mod.rs  operations.rs  thumbnail_repository.rs
app/src-tauri/src/errors/: app.rs  db.rs  file.rs  hash.rs  library.rs  mod.rs  scanner.rs  thumbnail.rs  watcher.rs
app/src-tauri/src/file_system/: file_id.rs  hash.rs  mod.rs  scanner.rs  thumbnail_processor.rs  thumbnails.rs  utils.rs  watcher.rs
app/src-tauri/src/tests/: library.rs  mod.rs  watcher.rs
app/src-tauri/src/utils/: canon_path.rs  decorations.rs  mod.rs
app/src/components/: app-sidebar.tsx  chat-message.tsx  chat.tsx  comp-574.tsx  inspector-panel.tsx  library-setup.tsx  library-switcher.tsx  settings-panel.tsx  slider-control.tsx  tag.tsx  tree-sidebar-section.tsx
crates/app/: .gitignore  Cargo.toml  build.rs
crates/app/qml/: Main.qml
crates/app/src/: cxxqt_object.rs  lib.rs  main.rs  state.rs
crates/app/src/commands/: folder_management.rs
crates/app/src/config/: app.rs  database.rs  library.rs
crates/app/src/data/: mod.rs
crates/app/src/data/commands/: folder_info.rs  mod.rs
crates/app/src/data/internal/: file.rs  folder.rs  mod.rs  thumbnails.rs
crates/app/src/database/: manager.rs  mod.rs
crates/app/src/errors/: config.rs  file.rs  hash.rs  scanner.rs  state.rs  thumbnail.rs
crates/app/src/file_system/: hash.rs  watcher.rs
crates/app/src/utils/: canon_path.rs
crates/commands/: Cargo.toml
crates/commands/src/: file_operations.rs  folder_management.rs  lib.rs  library_management.rs  tag_management.rs  thumbnail_service.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  library.rs
crates/controllers/: Cargo.toml
crates/controllers/src/: lib.rs
crates/entity/src/: color.rs  file_has_tags.rs  file_system_identifier.rs  prelude.rs
crates/errors/: Cargo.toml
crates/errors-derive/: Cargo.toml
crates/errors-derive/src/: lib.rs
crates/errors-derive/tests/: integration.rs
crates/errors/src/: config.rs  database.rs  lib.rs  library.rs  thumbnail.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/hash/: Cargo.toml
crates/hash/src/: hash.rs  lib.rs
crates/io/: Cargo.toml
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250831_100005_create_folders.rs  m20250831_100006_create_file_has_tags.rs  m20250904_133644_create_thumbnails.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/model/src/commands/: filter.rs  folder_info.rs  tag.rs  watched_folders.rs
crates/model/src/services/: file.rs  folder.rs  mod.rs  thumbnail.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: config.rs  lib.rs  manager.rs
crates/repositories/src/fs/: operations.rs
crates/repositories/src/thumbnail/: operations.rs
crates/routes/: Cargo.toml
crates/routes/src/: database_queries.rs  mod.rs  util.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/fs/: mod.rs  scanner.rs  watcher.rs
crates/services/src/hash/: file_id.rs  hash.rs  mod.rs
crates/services/src/model/: file.rs  folder.rs  mod.rs  thumbnail.rs
crates/services/src/thumbnails/: generator.rs  mod.rs  thumbnails.rs
crates/src/: App.css  App.tsx  Layout.tsx  index.html  page.tsx  vite.config.ts
crates/src/components/: app-sidebar.tsx  image-grid.tsx  library-setup.tsx  tree-sidebar-section.tsx
crates/src/templates/: 20250522_stitch_eagle.html
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  library.rs  watcher.rs
dev/: README.md
dev/active/: serializable_error_macro.md
dev/active/rust-backend-skills/: rust-backend-skills-plan.md  rust-backend-skills-tasks.md
dev/archive/rust-backend-skills/: HANDOFF-2025-11-02-UPDATED.md  (+8 more)
docs/: claude_hooks.md
src/: App.tsx  Layout.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: App.css  package.json
web/src/: App.css  App.tsx
(+24 files in other folders)
