[workspace]
members = [ "crates/app", "crates/commands", "crates/controllers", "crates/entity", "crates/errors", "crates/errors-derive", "crates/events", "crates/hash", "crates/io", "crates/library", "crates/migration", "crates/model", "crates/repositories", "crates/services", "crates/tests" ]
resolver = "3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]

aes-gcm = "0.10.3"
anyhow = { version = "1.0.98" }
argon2 = { features = [  ], version = "0.6.0-rc.0" }
async-recursion = "1.1.1"
async-std = { features = [ "attributes", "tokio1" ], version = "*" }
async-trait = "0.1.89"
blake3 = "1.8.2"
cfg-if = "1.0.1"
chrono = { features = [ "serde" ], version = "0.4" }
convert_case = "0.6"
dirs = "6.0.0"
gtk = "0.18.2"
image = { default-features = false, features = [ "bmp", "gif", "jpeg", "png", "tiff", "webp" ], version = "0.25" }
infer = "0.19.0"
keyring = "3.6.2"
notify = "8.0.0"
notify-debouncer-full = "0.6.0"
num_cpus = "1.17.0"
password-hash = { features = [ "rand_core" ], version = "0.6.0-rc.1" }
proc-macro2 = "1"
quote = "1"
rand = "0.9.1"
rfd = { default-features = false, features = [  ], version = "*" }
sea-orm = { features = [ "chrono", "macros", "runtime-tokio-rustls", "sqlx-sqlite" ], version = "1.1.10" }
secrecy = "0.10.3"
serde = { features = [ "derive" ], version = "1" }
serde_json = "1"
syn = { features = [ "derive", "full", "parsing" ], version = "2" }
tauri = { features = [ "webkit2gtk" ], version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { features = [ "full" ], version = "*" }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { features = [ "env-filter" ], version = "0.3.19" }

app = { path = "crates/app" }
commands = { path = "crates/routes" }
controllers = { path = "crates/controllers" }
entity = { path = "crates/entity" }
errors = { path = "crates/errors" }
errors-derive = { path = "crates/errors-derive" }
events = { path = "crates/events" }
hash = { path = "crates/hash" }
io = { path = "crates/io" }
library = { path = "crates/library" }
migration = { path = "crates/migration" }
model = { path = "crates/model" }
repositories = { path = "crates/repositories" }
services = { path = "crates/services" }
tests = { path = "crates/tests" }

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
refining_impl_trait = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
redundant_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"                 # if this is blocking you, let's discuss in the team
unstable_features = "forbid"           # if this is blocking you, let's discuss in the team
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

single_use_lifetimes = "allow"      # too many false positives because of anonymous lifetimes in trait being unstable
unused_crate_dependencies = "allow" # too many false positives

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "allow"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# # restrictions
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
exit = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_used = "warn"

# allowed pedantic
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
items_after_statements = "allow"   # used in table tests
large_enum_variant = "allow"
manual_string_new = "allow"        # allows `"".to_string()`
missing_errors_doc = "allow"       # might be nice but this would force us to write docs even if we don't think it's necessary
missing_panics_doc = "allow"
