[package]
name = "hestia_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hestia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "*", features = ["full"] }
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
rfd = { version = "*", default-features = false, features = ["tokio", "xdg-portal"] }
entity = {path = "../entity"}
sea-orm = {version = "1.1.10"}
windows-sys = {version = "*", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

