[package]
name = "hestia_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hestia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = { version = "0.6.0-rc.0", features = [] }
password-hash = { version = "0.6.0-rc.1", features = ["rand_core"] }
tauri = { version = "2", features = ["webkit2gtk"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "*", features = ["full"] }
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
gtk = "0.18.2"
rfd = { version = "*", default-features = false, features = [
  "tokio",
] }
entity = { path = "../entity" }
sea-orm = { version = "1.1.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
tempfile = "3.20.0"
blake3 = "1.8.2"
async-recursion = "1.1.1"
secrecy = "0.10.3"
cfg-if = "1.0.1"
keyring = "3.6.2"
toml = "0.8.23"
dirs = "6.0.0"
aes-gcm = "0.10.3"
rand = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.89"
tauri-plugin-dialog = "2"
migration = { path = "../migration" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
infer = "0.16"
