[package]
name = "hestia_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hestia_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = { workspace = true }
password-hash = { workspace = true }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
gtk = { workspace = true }
rfd = { workspace = true }
entity = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
async-recursion = { workspace = true }
secrecy = { workspace = true }
cfg-if = { workspace = true }
keyring = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tauri-plugin-dialog = { workspace = true }
migration = { workspace = true }
image = { workspace = true }
infer = { workspace = true }
num_cpus = { workspace = true }
