[package]
authors = [ "you" ]
description = "A Tauri App"
edition = "2021"
name = "hestia_tauri"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = [ "cdylib", "rlib", "staticlib" ]
name = "hestia_tauri_lib"

[build-dependencies]
tauri-build = { features = [  ], version = "2" }

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
entity = { workspace = true }
gtk = { workspace = true }
image = { workspace = true }
infer = { workspace = true }
keyring = { workspace = true }
library = { workspace = true }
migration = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
num_cpus = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
repositories = { workspace = true }
rfd = { workspace = true }
sea-orm = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
