[package]
name = "hestia"
edition.workspace = true
version.workspace = true

[dependencies]
controllers = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }

[lints]
workspace = true
