[package]
edition.workspace = true
name = "events"
version.workspace = true

[dependencies]
hash = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
[lints]
workspace = true
