[package]
edition.workspace = true
name = "repositories"
version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
errors = { workspace = true }
library = { workspace = true }
sea-orm = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
