[package]
name = "services"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
entity = { workspace = true }
chrono = { workspace = true }
repositories = { workspace = true }
[lints]
workspace = true
