[package]
edition.workspace = true
name = "services"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
events = { workspace = true }
image = { workspace = true }
repositories = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
